<?xml version="1.0"?>
<package>
  <name>transform_point_cloud_simple</name>
  <version>0.1.0</version>
  <description>Sample how to subscribe, transform and publish PointCloud2 messages.</description>
  <maintainer email="egordv@gmail.com">Egor Davydenko</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/egordv/transform_point_cloud_simple</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
